[velux] addopt reviewer suggestion (AGAIN)
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>